package app;

import app.config.ThymeleafConfig;
import app.controllers.ItemController;
import app.controllers.OrderController;
import app.controllers.UserController;
import app.persistence.ConnectionPool;
import io.javalin.Javalin;
import io.javalin.rendering.template.JavalinThymeleaf;

public class Main
{

    private static final String USER = "postgres";
    private static final String PASSWORD = "postgres";
    private static final String URL = "jdbc:postgresql://localhost:5432/%s?currentSchema=public";
    private static final String DB = "cupcake";

    private static final ConnectionPool connectionPool = ConnectionPool.getInstance(USER, PASSWORD, URL, DB);

    public static void main(String[] args)
    {
        // Initializing Javalin and Jetty webserver
        Javalin app = Javalin.create(config -> {
            config.staticFiles.add("/public");
            config.fileRenderer(new JavalinThymeleaf(ThymeleafConfig.templateEngine()));
            config.staticFiles.add("/templates");
        }).start(7070);

        // Routing
        app.get("/", ctx -> ctx.render("index.html"));
        app.get("/login", ctx -> ctx.render("login.html"));
        app.post("/login", ctx -> UserController.login(ctx, connectionPool));

        app.get("/createuser", ctx -> ctx.render("createUser.html"));
        app.post("/createuser", ctx -> UserController.createUser(ctx, connectionPool));

        //Testing
        app.get("/listOfCupcakes", ctx -> ctx.render("listOfCupcakes.html"));

        UserController.addRoutes(app, connectionPool);
        OrderController.addRoutes(app, connectionPool);
        ItemController.addRoutes(app, connectionPool);
    }
}